vcs/specs/parser/fail/types/unclosed_fn_params.vr
// @test: parse-fail
// @level: L0
// @tags: parser, types, function, params, error
// @description: Test detection of unclosed function parameter list
// @expected-error: E091

// Function type with unclosed parameter list
type Callback is fn(Int;
